--- a/picture-add.html
+++ b/picture-add.html
@@ -413,7 +413,7 @@ $(function(){
         }
 
         // 实例化
-        uploader = WebUploader.create({
+        var uploader2 = WebUploader.create({
             pick: {
                 id: '#filePicker-2',
                 label: '点击选择图片'
@@ -443,7 +443,7 @@ $(function(){
         });
 
         // 拖拽时不接受 js, txt 文件。
-        uploader.on( 'dndAccept', function( items ) {
+        uploader2.on( 'dndAccept', function( items ) {
             var denied = false,
                 len = items.length,
                 i = 0,
@@ -461,7 +461,7 @@ $(function(){
             return !denied;
         });
 
-        uploader.on('dialogOpen', function() {
+        uploader2.on('dialogOpen', function() {
             console.log('here');
         });
 
@@ -476,12 +476,12 @@ $(function(){
         // });
 
         // 添加“添加文件”的按钮，
-        uploader.addButton({
+        uploader2.addButton({
             id: '#filePicker2',
             label: '继续添加'
         });
 
-        uploader.on('ready', function() {
+        uploader2.on('ready', function() {
             window.uploader = uploader;
         });
 
@@ -761,7 +761,7 @@ $(function(){
             updateStatus();
         }
 
-        uploader.onUploadProgress = function( file, percentage ) {
+        uploader2.onUploadProgress = function( file, percentage ) {
             var $li = $('#'+file.id),
                 $percent = $li.find('.progress span');
 
@@ -770,7 +770,7 @@ $(function(){
             updateTotalProgress();
         };
 
-        uploader.onFileQueued = function( file ) {
+        uploader2.onFileQueued = function( file ) {
             fileCount++;
             fileSize += file.size;
 
@@ -784,7 +784,7 @@ $(function(){
             updateTotalProgress();
         };
 
-        uploader.onFileDequeued = function( file ) {
+        uploader2.onFileDequeued = function( file ) {
             fileCount--;
             fileSize -= file.size;
 
@@ -797,7 +797,7 @@ $(function(){
 
         };
 
-        uploader.on( 'all', function( type ) {
+        uploader2.on( 'all', function( type ) {
             var stats;
             switch( type ) {
                 case 'uploadFinished':
@@ -815,7 +815,7 @@ $(function(){
             }
         });
 
-        uploader.onError = function( code ) {
+        uploader2.onError = function( code ) {
             alert( 'Eroor: ' + code );
         };
 
