--- a/goods-list.html
+++ b/goods-list.html
@@ -30,7 +30,7 @@
 <!--_header 作为公共模版分离出去-->
 <header class="navbar-wrapper">
 	<div class="navbar navbar-fixed-top">
-		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">陆宝管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
+		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">多来美管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
 			<!--<nav class="nav navbar-nav">-->
 				<!--<ul class="cl">-->
 					<!--<li class="dropDown dropDown_hover"><a href="javascript:;" class="dropDown_A"><i class="Hui-iconfont">&#xe600;</i> 新增 <i class="Hui-iconfont">&#xe6d5;</i></a>-->
@@ -81,9 +81,9 @@
 		<dl id="订单管理">
 			<dt><i class="Hui-iconfont">&#xe687;</i> <a href="order-list.html" title="订单管理"> 订单管理</a></dt>
 		</dl>
-		<dl id="menu-map">
-			<dt><i class="Hui-iconfont">&#xe625;</i> <a href="shop-list.html" title="门店管理"> 门店管理</a></dt>
-		</dl>
+<!--		<dl id="menu-map">-->
+<!--			<dt><i class="Hui-iconfont">&#xe625;</i> <a href="shop-list.html" title="门店管理"> 门店管理</a></dt>-->
+<!--		</dl>-->
 		<dl id="menu-product">
 			<dt><i class="Hui-iconfont">&#xe681;</i> <a href="	product-category.html" title="分类管理"> 分类管理</a></dt>
 		</dl>
@@ -148,11 +148,9 @@
 					<div class="dataTables_length" id="DataTables_Table_0_length" style="margin-top: 15px">
 						<label style="margin-top: 10px" id="pageSizeShow">显示
 							<select name="DataTables_Table_0_length" aria-controls="DataTables_Table_0" class="" onchange="search()">
-								<option value="5">5</option>
-								<option value="10">10</option>
-								<option value="25">25</option>
-								<option value="50">50</option>
+								<option value="30">30</option>
 								<option value="100">100</option>
+								<option value="200">200</option>
 							</select>
 							条</label>
 					</div>
