--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <![endif]-->
 <!--/meta 作为公共模版分离出去-->
 
-<title>陆宝管理后台</title>
+<title>多来美管理后台</title>
 <meta name="keywords" content="H-ui.admin v3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
 <meta name="description" content="H-ui.admin v3.0，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
@@ -32,7 +32,7 @@
 <!--_header 作为公共模版分离出去-->
 <header class="navbar-wrapper">
 	<div class="navbar navbar-fixed-top">
-		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">陆宝管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
+		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">多来美管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
 			<span class="logo navbar-slogan f-l mr-10 hidden-xs"></span>
 			<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 			<!--<nav class="nav navbar-nav">-->
@@ -104,15 +104,9 @@
 				<!--</ul>-->
 			<!--</dd>-->
 		</dl>
-		<dl id="menu-map">
-			<dt><i class="Hui-iconfont">&#xe625;</i><a href="shop-list.html" title="门店管理"> 门店管理</a></dt>
-			<!--<dt><i class="Hui-iconfont">&#xe620;</i> 门店管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>-->
-			<!--<dd>-->
-				<!--<ul>-->
-					<!--<li><a href="shop-list.html" title="门店管理">门店管理</a></li>-->
-				<!--</ul>-->
-			<!--</dd>-->
-		</dl>
+<!--		<dl id="menu-map">-->
+<!--			<dt><i class="Hui-iconfont">&#xe625;</i><a href="shop-list.html" title="门店管理"> 门店管理</a></dt>-->
+<!--		</dl>-->
 		<dl id="menu-product">
 			<dt><i class="Hui-iconfont">&#xe681;</i> <a href="	product-category.html" title="分类管理"> 分类管理</a></dt>
 			<!--<dt><i class="Hui-iconfont">&#xe69c;</i> 其他管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>-->
