--- a/product-category-add.html
+++ b/product-category-add.html
@@ -23,6 +23,13 @@
 <div class="pd-20">
   <form class="form form-horizontal" id="form-user-add">
     <div class="row cl">
+      <label class="form-label col-xs-4 col-sm-2" style="text-align: left"><span class="c-red">*</span>排序：</label>
+      <div class="formControls col-5">
+        <input type="number" class="input-text" value="" placeholder="" id="sort" name="">
+      </div>
+      <div class="col-5"> </div>
+    </div>
+    <div class="row cl">
       <label class="form-label col-xs-4 col-sm-2" style="text-align: left"><span class="c-red">*</span>分类名称：</label>
       <div class="formControls col-5">
         <input type="text" class="input-text" value="" placeholder="" id="user-name" name="">
@@ -64,11 +71,12 @@ $(function(){
   $("#classifySubmit").click(function () {
     var classifyName = $("#user-name").val();
     var classifyDetail = $("#detail").val();
+    var sort = $("#sort").val();
     var id = $("#user-name").attr("name");
     $.ajax({
       // contentType: "application/json",
       url: apiHeader + "/classify/insertClassify",
-      data: {id:id,classifyName: classifyName,classifyDetail: classifyDetail},
+      data: {id:id,classifyName: classifyName,classifyDetail: classifyDetail,sort: sort},
       type: "POST",
       dataType: "json",
       success: function(result){
