--- a/product-category.html
+++ b/product-category.html
@@ -30,7 +30,7 @@
 <!--_header 作为公共模版分离出去-->
 <header class="navbar-wrapper">
 	<div class="navbar navbar-fixed-top">
-		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">陆宝管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
+		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">多来美管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
 			<!--<nav class="nav navbar-nav">-->
 				<!--<ul class="cl">-->
 					<!--<li class="dropDown dropDown_hover"><a href="javascript:;" class="dropDown_A"><i class="Hui-iconfont">&#xe600;</i> 新增 <i class="Hui-iconfont">&#xe6d5;</i></a>-->
@@ -81,9 +81,9 @@
 		<dl id="订单管理">
 			<dt><i class="Hui-iconfont">&#xe687;</i> <a href="order-list.html" title="订单管理"> 订单管理</a></dt>
 		</dl>
-		<dl id="menu-map">
-			<dt><i class="Hui-iconfont">&#xe625;</i> <a href="shop-list.html" title="门店管理"> 门店管理</a></dt>
-		</dl>
+<!--		<dl id="menu-map">-->
+<!--			<dt><i class="Hui-iconfont">&#xe625;</i> <a href="shop-list.html" title="门店管理"> 门店管理</a></dt>-->
+<!--		</dl>-->
 		<dl id="menu-product">
 			<dt><i class="Hui-iconfont">&#xe681;</i> <a href="	product-category.html" title="分类管理"> 分类管理</a></dt>
 		</dl>
@@ -177,13 +177,11 @@
 // }
 
 //更新当前分类页面的内容
-function updateClassify(id,classifyName,classifyDetail)
+function updateClassify(sort,id,classifyName,classifyDetail)
 {
-	console.log(id);
-	console.log(classifyName);
-	console.log(classifyDetail);
 	document.getElementById('testIframe').contentWindow.document.getElementById('user-name').value = classifyName;
 	document.getElementById('testIframe').contentWindow.document.getElementById('user-name').name = id;
+	document.getElementById('testIframe').contentWindow.document.getElementById('sort').value = sort;
 	document.getElementById('testIframe').contentWindow.document.getElementById('detail').value = classifyDetail;
 
 	// $("#classifyTable", document.frames("#testIframe").document).find("#user-name").val(classifyName);
@@ -203,7 +201,7 @@ $(document).ready(function(){
 				// obj = {id:i+11,pId:1,name:dataArray[i].classifyName};
 				// zNodes.push(obj);
 				// msgText = msgText + "<li id=\""+i+"\" class=\"level1\" tabin"dex=\"0\" hidefocus=\"true\" treenode=\"\"><span id=\""+i+"_switch\" title=\"\" class=\"button level1 switch noline_docu\" treenode_switch=\"\"></span><a id=\""+i+"_a\" class=\"level1\" treenode_a=\"\" onclick='updateClassify("+dataArray[i].id+","+dataArray[i].classifyName+","+dataArray[i].classifyDetail+")' style=\"\" title=\""+dataArray[i].classifyName+"\"><span id=\"treeDemo_2_ico\" title=\"\" treenode_ico=\"\" class=\"button ico_docu\" style=\"\"></span><span id=\""+i+"_span\">"+dataArray[i].classifyName+"</span></a></li>";
-				var tempParam = "\""+dataArray[i].id+"\""+","+ "\"" + dataArray[i].classifyName+ "\"" + ","+ "\"" + dataArray[i].classifyDetail + "\"";
+				var tempParam = "\""+dataArray[i].sort+"\""+","+ "\""+dataArray[i].id+"\""+","+ "\"" + dataArray[i].classifyName+ "\"" + ","+ "\"" + dataArray[i].classifyDetail + "\"";
 				// console.log(tempParam);
 				msgText = msgText + "<li id=\""+i+"\" class=\"level1\" tabindex=\"0\" hidefocus=\"true\" treenode=\"\"><span id=\""+i+"_switch\" title=\"\" class=\"button level1 switch noline_docu\" treenode_switch=\"\"></span><a id=\""+i+"_a\" class=\"level1\" href='#' onclick='updateClassify("+tempParam+")' style=\"\" title=\""+dataArray[i].classifyName+"\"><span id=\"treeDemo_2_ico\" title=\"\" treenode_ico=\"\" class=\"button ico_docu\" style=\"\"></span><span id=\""+i+"_span\">"+dataArray[i].classifyName+"</span></a></li>";
 			}
