--- a/shop-list.html
+++ b/shop-list.html
@@ -30,7 +30,7 @@
 <!--_header 作为公共模版分离出去-->
 <header class="navbar-wrapper">
 	<div class="navbar navbar-fixed-top">
-		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">陆宝管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
+		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">多来美管理后台</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#"></a>
 			<!--<nav class="nav navbar-nav">-->
 				<!--<ul class="cl">-->
 					<!--<li class="dropDown dropDown_hover"><a href="javascript:;" class="dropDown_A"><i class="Hui-iconfont">&#xe600;</i> 新增 <i class="Hui-iconfont">&#xe6d5;</i></a>-->
