--- a/picPlay-list.html
+++ b/picPlay-list.html
@@ -76,7 +76,7 @@
 			<dt><i class="Hui-iconfont">&#xe681;</i> <a href="	product-category.html" title="分类管理"> 分类管理</a></dt>
 		</dl>
 		<dl id="menu-picPlay">
-			<dt><i class="Hui-iconfont">&#xe681;</i> <a href="picPlay-list.html" title="轮播图管理"> 轮播图管理</a></dt>
+			<dt><i class="Hui-iconfont">&#xe68d;</i> <a href="picPlay-list.html" title="轮播图管理"> 轮播图管理</a></dt>
 		</dl>
 	</div>
 </aside>
@@ -113,11 +113,11 @@
 					</thead>
 					<tbody id="goodTableBody">
 						<tr class="text-c">
-							<th width="100"><div class="imgDiv"><img id="picImg1" src="temp/empty.png" class="picPlayImg"><a onclick='deletePic(1)'><img id="deletePic1" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(1)">更换</a><input class="picPlayInput" type="file" id="pic1" hidden></th>
-							<th width="100"><div class="imgDiv"><img id="picImg2" src="temp/empty.png" class="picPlayImg"><a onclick='deletePic(2)'><img id="deletePic2" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(2)">更换</a><input class="picPlayInput" type="file" id="pic2" hidden></th>
-							<th width="100"><div class="imgDiv"><img id="picImg3" src="temp/empty.png" class="picPlayImg"><a onclick='deletePic(3)'><img id="deletePic3" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(3)">更换</a><input class="picPlayInput" type="file" id="pic3" hidden></th>
-							<th width="100"><div class="imgDiv"><img id="picImg4" src="temp/empty.png" class="picPlayImg"><a onclick='deletePic(4)'><img id="deletePic4" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(4)">更换</a><input class="picPlayInput" type="file" id="pic4" hidden></th>
-							<th width="100"><div class="imgDiv"><img id="picImg5" src="temp/empty.png" class="picPlayImg"><a onclick='deletePic(5)'><img id="deletePic5" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(5)">更换</a><input class="picPlayInput" type="file" id="pic5" hidden></th>
+							<th width="100"><div class="imgDiv"><img id="picImg1" src="temp/empty.png" class="picPlayImg" onclick="updatePic(1)"><a onclick='deletePic(1)'><img id="deletePic1" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(1)">更换</a><input class="picPlayInput" type="file" id="pic1" hidden></th>
+							<th width="100"><div class="imgDiv"><img id="picImg2" src="temp/empty.png" class="picPlayImg" onclick="updatePic(2)"><a onclick='deletePic(2)'><img id="deletePic2" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(2)">更换</a><input class="picPlayInput" type="file" id="pic2" hidden></th>
+							<th width="100"><div class="imgDiv"><img id="picImg3" src="temp/empty.png" class="picPlayImg" onclick="updatePic(3)"><a onclick='deletePic(3)'><img id="deletePic3" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(3)">更换</a><input class="picPlayInput" type="file" id="pic3" hidden></th>
+							<th width="100"><div class="imgDiv"><img id="picImg4" src="temp/empty.png" class="picPlayImg" onclick="updatePic(4)"><a onclick='deletePic(4)'><img id="deletePic4" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(4)">更换</a><input class="picPlayInput" type="file" id="pic4" hidden></th>
+							<th width="100"><div class="imgDiv"><img id="picImg5" src="temp/empty.png" class="picPlayImg" onclick="updatePic(5)"><a onclick='deletePic(5)'><img id="deletePic5" src="temp/delete.png" class='deletePic'/></a></div><a class="picPlayA" href="#" onclick="updatePic(5)">更换</a><input class="picPlayInput" type="file" id="pic5" hidden></th>
 						</tr>
 					</tbody>
 				</table>
