--- a/product-category-add.html
+++ b/product-category-add.html
@@ -23,9 +23,9 @@
 <div class="pd-20">
   <form class="form form-horizontal" id="form-user-add">
     <div class="row cl">
-      <label class="form-label col-xs-4 col-sm-2" style="text-align: left"><span class="c-red">*</span>排序：</label>
+      <label class="form-label col-xs-4 col-sm-1" style="text-align: left"><span class="c-red">*</span>排序：</label>
       <div class="formControls col-5">
-        <input type="number" class="input-text" value="" placeholder="" id="sort" name="">
+        <input type="number" class="input-text" value="" placeholder="" id="sort" name="" min="1">
       </div>
       <div class="col-5"> </div>
     </div>
