--- a/product-category.html
+++ b/product-category.html
@@ -88,7 +88,7 @@
 			<dt><i class="Hui-iconfont">&#xe681;</i> <a href="	product-category.html" title="分类管理"> 分类管理</a></dt>
 		</dl>
 		<dl id="menu-picPlay">
-			<dt><i class="Hui-iconfont">&#xe681;</i> <a href="picPlay-list.html" title="轮播图管理"> 轮播图管理</a></dt>
+			<dt><i class="Hui-iconfont">&#xe68d;</i> <a href="picPlay-list.html" title="轮播图管理"> 轮播图管理</a></dt>
 		</dl>
 	</div>
 </aside>
